# Youtube-Downloader

./: .gitignore  LICENSE  README.md  SERVER_GUIDE.md  VERCEL_GUIDE.md  app.py  change_directory.py  config.py  create_portable_package.py  get_server_ip.py  launcher.py  pyproject.toml  requirements.txt  setup_portable.py  start.bat  start.sh  start_fast.bat  start_local.bat  start_server.bat  start_server.sh
static/: app.js  style.css
templates/: index.html  index_fixed.html  progress.html  result.html  simple.html  streams.html
